finalize Psalms in Interp (3143) for Fall 2014 (v3.0)

--- a/BSTH/3143.tex
+++ b/BSTH/3143.tex
@@ -1,35 +1,33 @@
-% !TEX TS-program = XeLaTeX
-% !TEX encoding = UTF-8 Unicode
-% Copyright (c) 2014 by Daniel R. Driver. All rights reserved.
+% -*- program: xelatex -*-
+% -*- pdf: BSTH_3143_Driver_F14 -*-
 
 \documentclass[titlepage]{article}
-
+% clone the necessary input files: git@github.com:danieldriver/syllabus.git
 \newcommand\policy{../policy}
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[3.0-WIP]{BSTH 3143}
+\coursecode[3.0]{BSTH 3143}
 \coursetitle{Psalms in Interpretation}
 
 % Previously taught in: Fall 2008, Winter 2011 as RLGS 3263 (Text &
 % Interpretation): The Psalms in the Christian Tradition
 
 \professor{Daniel R. Driver}
-\phone{416.226.6620 x2201}
+\phone{416-226-6620 ext. 2201}
 \email{ddriver@tyndale.ca}
 \officehours{Mon. \& Thur., 1:30--3:30 \PM}
 
 \semester{Fall 2014}
-\meets{Mondays \& Thursdays}
+\meets{Mondays \& Thursdays} % \meets{on}{at}{in}
       {11:15 \AM--12:35 \PM}
       {Ballyconnor 2083}
 \website{classes.tyndale.ca}
 \cdescription{% copy from tyndale.ca/registrar/calendar
-  Examines the hymns of the people of Israel with regard to their
-  theology and literary types of the Psalms. The arrangement of the
-  Psalms and the history of reception of specific Psalms will form a
-  significant portion of the course. Prerequisites: \textsc{bsth} 101,
-  102, 201.
+  Examines the hymns of the people of Israel with regard to their theology and
+  literary types of the Psalms. The arrangement of the Psalms and the history
+  of reception of specific Psalms will form a significant portion of the
+  course. Prerequisites: \textsc{bsth} 101, 102, 201.
 }
 
 \input{\incl/preamble}
@@ -40,80 +38,25 @@
 \section{Learning Outcomes}
 \label{outcomes}
 
-% A Model of Learning Objectives
-% Adapted from http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
-%
-% A learning objective should contain a *subject* (a verb related to
-% cognitive process) and an *object* (a noun identifying the knowledge
-% or skill sought). Statements should be precise and measurable, e.g.,
-% "By the end of this course, students will be able to <verb> <noun>."
-%
-% Anderson and Krathwohl name four *classes of knowledge* that students
-% can be expected to acquire. Terms move from the concrete to the
-% abstract:
-%
-%   1. factual           (basic elements, details, terminology)
-%   2. conceptual        (interrelationship of basic elements)
-%   3. procedural        (skills, methods, techniques, criteria)
-%   4. metacognitive     (strategy, context and conditions, self-knowledge)
-%
-% Metacognitive knowledge is a special case. It concerns one's own
-% "cognition and about oneself in relation to various subject matters"
-% (Anderson and Krathwohl, 2001, p.44).
-%
-% A&K also identify 19 *cognitive processes*, arranged in six categories
-% (a 2001 revision of Bloom's 1957 taxonomy) that progress from lower
-% order to higher order thinking skills (from LOTS to HOTS):
-%
-%   1. remember
-%      * recognizing     (identifying)
-%      * recalling       (retrieving)
-%   2. understand
-%      * interpreting    (clarifying, paraphrasing, representing, translating)
-%      * exemplifying    (illustrating, instantiating)
-%      * classifying     (categorizing, subsuming)
-%      * summarizing     (abstracting, generalizing)
-%      * inferring       (concluding, extrapolating, interpolating, predicting)
-%      * comparing       (contrasting, mapping, matching)
-%      * explaining      (constructing models)
-%   3. apply
-%      * executing       (carrying out)
-%      * implementing    (using)
-%   4. analyze
-%      * differentiating (discriminating, distinguishing, focusing, selecting)
-%      * organizing      (finding coherence, integrating, outlining, parsing, structuring)
-%      * attributing     (deconstructing)
-%   5. evaluate
-%      * checking        (coordinating, detecting, monitoring, testing)
-%      * critiquing      (judging)
-%   6. create
-%      * generating      (hypothesizing)
-%      * planning        (designing)
-%      * producing       (constructing)
-%
-% If you reference a List of Measurable Verbs Used to Assess Learning
-% Outcomes, remember that A&K reverse Bloom's 6th and 5th categories.
+The Psalms of the Hebrew Bible/Old Testament have always played an important
+part in the life of the church and synagogue. A major goal of this course is
+therefore to gain some historical perspective on how the Psalter has fed and
+informed Jewish and Christian faith in various periods: in biblical times,
+Rabbinic and Patristic periods, the Middle Ages, the Reformation, the
+Enlightenment, and finally the early and late modern periods. By interacting
+with recent research into the shape and shaping of the Psalter we will also
+consider the anthology's arrangement.
 
-The Psalms of the Hebrew Bible/Old Testament have always played an
-important part in the life of the church and synagogue. A major goal of
-this course is therefore to gain some historical perspective on how the
-Psalter has fed and informed Jewish and Christian faith in various
-periods: in biblical times, Rabbinic and Patristic periods, the Middle
-Ages, the Reformation, the Enlightenment, and finally the early and late
-modern periods. By interacting with recent research into the shape and
-shaping of the Psalter we will also consider the anthology's arrangement.
-
-The course meets twice a week, which facilitates two main foci. Mondays
-are dedicated to hermeneutical and historical factors involved in
-reading and understanding the Psalter. Thursdays allow us to put theory
-into practice by reading particular psalms in connection with their
-reception history. By the end of the course students should be able to:
-interpret at least four distinct periods in the reception of the
-Psalter; analyze key differences between ancient and modern
-interpreters, and a variety of Jewish and Christian interpreters;
-interpret a psalm afresh while interacting with its past readers; recite
-at least twelve verses of a psalm from memory; respond creatively to a
-psalm in a way that demonstrates awareness of its impact.
+The course meets twice a week, which facilitates two main foci. Mondays are
+dedicated to hermeneutical and historical factors involved in reading and
+understanding the Psalter. Thursdays allow us to put theory into practice by
+reading particular psalms in connection with their reception history. By the
+end of the course students should be able to: report on at least four distinct
+periods in the reception of the Psalter; analyze key differences between
+ancient and modern interpreters, and a variety of Jewish and Christian
+interpreters; interpret a psalm afresh while interacting with its past
+readers; recite at least twelve verses of a psalm from memory; respond
+creatively to a psalm in a way that demonstrates awareness of its impact.
 
 \section{Required Texts \& Materials}
 \label{texts}
@@ -145,21 +88,45 @@ material; then again, students who choose not to read it should not
 expect to get an A for the course.
 
 \begin{enumerate}
- \item Katharine Dell, “Psalms,” pages 37--51 in M. Lieb et al., eds., \emph{The Oxford Handbook of the Reception History of the Bible} (Oxford: Oxford University Press, 2011). [\href{http://ezproxy.mytyndale.ca:2048/login?url=http://www.oxfordhandbooks.com/view/10.1093/oxfordhb/9780199204540.001.0001/oxfordhb-9780199204540-e-4}{online}]
- \item James Kugel, “The Psalms of David,” pages 458–473 in \emph{How to Read the Bible: A Guide to Scripture, Then and Now} (New York/Toronto: Free Press, 2007).
- \item Michael Cameron, ``Hearing Voices: Christ at Prayer `in the Psalm and on the Cross,'\,'' pages 164--212 in \emph{Christ Meets Me Everywhere: Augustine's Early Figurative Exegesis} (Oxford: Oxford University Press, 2012).
- \item C.\,S. Lewis, ``\,`Sweeter than Honey,'\,'' pages 54--65 in \emph{Reflections on the Psalms} (London: Geoffrey Bles, 1958).
- \item Alan Cooper, ``Ps 24:7-10: Mythology and Exegesis,'' \emph{Journal of Biblical Literature} 102/1 (1983): 37--60. [\href{http://www.jstor.org/stable/3260745}{online}]
- \item Rolf Rendtorff, “The Psalms of David: David in the Psalms,” pages 53–64 in P. Flint and P.~Miller, eds., \emph{The Book of Psalms} (Leiden: Brill, 2005).
- \item Hermann Gunkel, “The Religion of the Psalms,” pages 134–167 in \emph{Water for a Thirsty Land} (Minneapolis: Fortress, 2001). German original published in 1922.
- \item Hans-Joachim Kraus, “The Psalms in the New Testament,” pages 177–203 in \emph{Theology of the Psalms} (Minneapolis: Augsburg, 1986). German original published in 1979.
- \item Brevard Childs, “Psalm Titles and Midrashic Exegesis,” \emph{Journal of Semitic Studies} 16/2 (1971): 137--150. See also his “Psalm 8 in the Context of the Christian Canon,” pages 151–163 in \emph{Biblical Theology in Crisis} (Philadelphia: Westminster, 1970).
- \item John O’Keefe, “‘A Letter that Killeth’: Toward a Reassessment of Antiochene Exegesis, or Diodore, Theodore and Theodoret on the Psalms,” \emph{Journal of Early Christian Studies} 8/1 (2000): 83–104.
- \item Jonathan Magonet, “Through Rabbinic Eyes: Psalm 23,” pages 47–61 in \emph{A Rabbi Reads the Psalms} (2nd ed.; London: SCM, 2004).
- \item Gerald Wilson, “Shaping the Psalter: A Consideration of Editorial Linkage in the Book of Psalms,” pages 72–82 in J.\,C. McCann, ed., \emph{The Shape and Shaping of the Psalter} (JSOTSup 159; Sheffield: Sheffield Academic Press, 1993).
- \item J. Clinton McCann, “Books I–III and the Editorial Purpose of the Hebrew Psalter,” pages 93–107 in J.\,C. McCann, ed., \emph{The Shape and Shaping of the Psalter} (JSOTSup 159; Sheffield: Sheffield Academic Press, 1993).
- \item Gerald Sheppard, “Theology and the Book of Psalms,” \emph{Interpretation} 46 (1992): 143–155.
- \item Erhard Gerstenberger, “Theologies in the Book of Psalms,” pages 603–625 in P. Flint and P. Miller, eds., \emph{The Book of Psalms} (Leiden: Brill, 2005).
+
+  \item Katharine Dell, “Psalms,” pages 37--51 in M. Lieb et al., eds., \emph{The Oxford Handbook of the Reception History of the Bible} (Oxford: Oxford University Press, 2011). [\href{http://ezproxy.mytyndale.ca:2048/login?url=http://www.oxfordhandbooks.com/view/10.1093/oxfordhb/9780199204540.001.0001/oxfordhb-9780199204540-e-4}{online}]
+
+  \item James Kugel, “The Psalms of David,” pages 458–473 in \emph{How to Read the Bible: A Guide to Scripture, Then and Now} (New York/Toronto: Free Press, 2007).
+
+  \item Hermann Gunkel, “The Religion of the Psalms,” pages 134–167 in \emph{Water for a Thirsty Land} (Minneapolis: Fortress, 2001). German original published in 1922.
+
+  \item John O’Keefe, “‘A Letter that Killeth’: Toward a Reassessment of Antiochene Exegesis, or Diodore, Theodore and Theodoret on the Psalms,” \emph{Journal of Early Christian Studies} 8/1 (2000): 83–104.
+
+  \item Brevard Childs, “Psalm Titles and Midrashic Exegesis,” \emph{Journal of Semitic Studies} 16/2 (1971): 137--150. See also his “Psalm 8 in the Context of the Christian Canon,” pages 151–163 in \emph{Biblical Theology in Crisis} (Philadelphia: Westminster, 1970).
+
+  \item Michael Cameron, ``Hearing Voices: Christ at Prayer `in the Psalm and on the Cross,'\,'' pages 164--212 in \emph{Christ Meets Me Everywhere: Augustine's Early Figurative Exegesis} (Oxford: Oxford University Press, 2012).
+
+  \item Jonathan Magonet, “Through Rabbinic Eyes: Psalm 23,” pages 47–61 in \emph{A Rabbi Reads the Psalms} (2nd ed.; London: SCM, 2004).
+
+  \item Alan Cooper, ``Ps 24:7-10: Mythology and Exegesis,'' \emph{Journal of Biblical Literature} 102/1 (1983): 37--60. [\href{http://www.jstor.org/stable/3260745}{online}]
+
+  \item C.\,S. Lewis, ``\,`Sweeter than Honey,'\,'' pages 54--65 in \emph{Reflections on the Psalms} (London: Geoffrey Bles, 1958).
+
+  \item Joseph Addison. ``Saturday, September 20, 1712,'' \emph{The Spectator} 489 (available on \href{http://www.gutenberg.org/files/12030/12030-h/SV3/Spectator3.html#section489}{Project Gutenberg}). Also read his \href{http://cyberhymnal.org/htm/s/p/spacious.htm}{poetic paraphrase of Psalm 19}.
+
+  \item J. Clinton McCann, “Books I–III and the Editorial Purpose of the Hebrew Psalter,” pages 93–107 in J.\,C. McCann, ed., \emph{The Shape and Shaping of the Psalter} (JSOTSup 159; Sheffield: Sheffield Academic Press, 1993).
+
+  \item Gerald Wilson, “Shaping the Psalter: A Consideration of Editorial Linkage in the Book of Psalms,” pages 72–82 in J.\,C. McCann, ed., \emph{The Shape and Shaping of the Psalter} (JSOTSup 159; Sheffield: Sheffield Academic Press, 1993).
+
+  \item Gerald Sheppard, “Theology and the Book of Psalms,” \emph{Interpretation} 46 (1992): 143–155.
+
+  \item Hans-Joachim Kraus, “The Psalms in the New Testament,” pages 177–203 in \emph{Theology of the Psalms} (Minneapolis: Augsburg, 1986). German original published in 1979.
+
+  \item Christopher R. Seitz, ``Theological Use of the Old Testament: Recent New Testament Scholarship and the Psalms as Christian Scripture,'' pages 137--156 in C. Seitz, \emph{The Character of Christian Scripture: The Significance of a Two-Testament Bible} (Grand Rapids: Baker Academic, 2011).
+
+  \item Craig A. Evans, “Praise and Prophecy in the Psalter and in the New Testament,” pages 551--579 in P. Flint and P. Miller, eds., \emph{The Book of Psalms} (Leiden: Brill, 2005).
+
+  \item Adele Berlin, “Psalms and the Literature of Exile: Psalms 137, 44, 69, and 78,” pages 65--86 in P. Flint and P. Miller, eds., \emph{The Book of Psalms} (Leiden: Brill, 2005).
+
+  % \item Erhard Gerstenberger, “Theologies in the Book of Psalms,” pages 603–625 in P. Flint and P. Miller, eds., \emph{The Book of Psalms} (Leiden: Brill, 2005).
+
+  \item Rolf Rendtorff, “The Psalms of David: David in the Psalms,” pages 53–64 in P. Flint and P.~Miller, eds., \emph{The Book of Psalms} (Leiden: Brill, 2005).
+
 \end{enumerate}
 
 \section{Evaluation}
@@ -168,60 +135,54 @@ expect to get an A for the course.
 \subsection{Grade Structure for \ccode}
 \label{structure}
 
-% Please consider the following structure in your course. Evaluation
-% should be clearly linked to Learning Outcomes.
-%   - Some form of meaningful evaluation should occur during the first 4
-%     weeks of the course; **all students should (and first-year
-%     students must) receive an indication of their performance in the
-%     first half of the course.**
-%   - **Plan your assignments so that each can be returned to students
-%     before the next is due.**
-%   - Most courses should have a rigorous final exam of 2--3 hours
-%     duration. Some upper-year courses may not require a final,
-%     depending on pedagogical design and assessment strategy. **Final
-%     exams should be appropriately demanding in both breadth and depth
-%     to assess accurately the achievement of learning outcomes.**
-%   - **No assignments should be due in the last week of classes; final
-%     examinations will be scheduled only by the Registrar’s Office.**
-
 \begin{enumerate}
- \item Each week of class will typically begin with a \textbf{reading
+
+  \item Each week of class will typically begin with a \textbf{reading
    quiz}. These are designed to ensure that you have read the assigned
    material carefully. Quizzes given in class may not be made up in the
    case of absence, though in special cases they may be taken in advance.
- \item Students are to \textbf{memorize 12 verses of a psalm} and recite
+
+  \item Students are to \textbf{memorize 12 verses of a psalm} and recite
    it to me privately, in my office, before the end of tenth week of
    class. Any psalm is allowed unless you have memorized it before
    (Psalm 8 is therefore excluded for many).
- \item Students must \textbf{creatively represent one psalm} in the class
+
+  \item Students must \textbf{creatively represent one psalm} in the class
    immediately following that psalm’s workshop (e.g., Psalm 1 at the
    start of Week 3). Engage as many of the senses as possible, using
    whatever you can find or create. Be inventive! The only conditions
    are (a) that you explain or demonstrate a connection with the text
    studied and (b) that your presentation last between 5 and 8 minutes
    (plus 2 minutes for questions).
- \item The last day of each week (Thursdays unless the only class is on
+
+  \item The last day of each week (Thursdays unless the only class is on
    Monday) will be devoted to a \textbf{seminar-style discussion} of
    individual psalms. Each student will be assigned a commentator for a
    period of 3 weeks, and they are responsible to report on that
    commentator and bring their insight to bear on the discussion. How
    should you prepare?
-	\begin{enumerate}
-	 \item Read the seminar text closely and carefully. Read it several
+
+  \begin{enumerate}
+
+    \item Read the seminar text closely and carefully. Read it several
        times. Look for distinctive language, themes and images, and stay
        alert to intertextual connections between the main passage and
        other biblical literature. Jot down your observations.
-	 \item Consult your designated commentary. It should be read
+
+    \item Consult your designated commentary. It should be read
        carefully, but after you have got a sense for the psalm on its
        own. One good approach might be to read the psalm twice, make
-       some preliminary notes, and then to read your commentator before
-       filling out the notes.
-	 \item Notes will not necessarily be collected, although I may ask to
-       see them if there is any doubt about the adequacy of your
-       preparation. Remember that you will be called upon to represent
-       your unique commentator’s views to the class.
+       some preliminary notes, and then to read your commentator and
+       fill out your preliminary notes.
+
+    \item Notes will be collected near the end of the semester, and I may
+       ask to see them sooner if there is any doubt about the adequacy of
+       your preparation. Remember that you are the resident authority on
+       your designated commentator.
+
 	\end{enumerate}
- \item In lieu of a final exam students are to \textbf{compose an essay}
+
+  \item In lieu of a final exam students are to \textbf{compose an essay}
 	   on one of the psalms we workshop. Consult all the perspectives
 	   brought to bear in the seminar on the psalm of your choice, and
 	   incorporate as many as are expedient for your discussion. The aim
@@ -238,15 +199,16 @@ The breakdown for the semester's total work is as follows:
 
 \begin{table}[htbp]
   \centering
+  {\lining
   \begin{tabular}{lr}
     \toprule
     Reading Quizzes         & 25\% \\
     Psalm Memorization      & 10\% \\
-    Creative Representation & 15\% \\
-    Seminar Contributions   & 20\% \\
+    Creative Representation & 10\% \\
+    Seminar Contributions   & 25\% \\
     Final Paper             & 30\% \\
     \bottomrule
-  \end{tabular}
+  \end{tabular}}
   \caption{Distribution of Grades}
   \label{distribution}
 \end{table}
@@ -279,9 +241,6 @@ completed before the last class of their week. We will adhere to the
 schedule as closely as possible, though I reserve the right to adjust it
 to suit the needs of the class.
 
-\newcommand\Yhwh{\textsc{Yhwh}}
-\newcommand\rarr{\char"2192\hspace*{0.5pt}}
-
 \setcolumncount{5} % set up \sessioncount, \unit{} and \noclass{} macros
 \begin{table}[htb]% add p to put the schedule on its own page
   \centering
@@ -295,17 +254,17 @@ to suit the needs of the class.
           & Psalm 150    & Introduction & Introduction   & 4 Sep.      \\
           & Psalm 1      & pp. 5--27    & Ch. 1          & 8, 11 Sep.  \\
           & Psalm 2      & pp. 28--55   & Ch. 2          & 15, 18 Sep. \\
-          & Psalm 19     & pp. 55--76   & Ch. 3          & 22, 25 Sep. \\
+          & Psalm 51     & pp. 55--76   & Ch. 3          & 22, 25 Sep. \\
           & Psalm 22     & pp. 77--104  & Ch. 4          & 29 Sep., 2 Oct. \\
           & Psalm 23     & pp. 104--130 & Ch. 5          & 6, 9 Oct.   \\
     \noclass{Thanksgiving}                               & 13 Oct.     \\
           & Psalm 24     & pp. 131--162 &                & 16 Oct.     \\
-          & Psalm 51     & pp. 163--191 &                & 20 Oct.     \\
+          & Psalm 19     & pp. 163--191 &                & 20 Oct.     \\
     \noclass{Reading Days}                               & 23--24 Oct. \\
           & Psalm 73     & pp. 192--215 & Ch. 6          & 27, 30 Oct. \\
           & Psalm 90     & pp. 215--241 & Ch. 7          & 3, 6 Nov.   \\
           & Psalm 110    & pp. 242--266 & Ch. 8          & 10, 13 Nov. \\
-          & Psalm 116    & pp. 266--290 & Ch. 9          & 17, 20 Nov. \\
+          & Psalm 118    & pp. 266--290 & Ch. 9          & 17, 20 Nov. \\
           & Psalm 137    & pp. 290--312 & Ch. 10         & 24, 27 Nov. \\
           & Psalm 145    &              &                & 1 Dec.      \\
     \noclass{Reading Days}                               & 2--3 Dec.   \\
@@ -315,10 +274,9 @@ to suit the needs of the class.
   \label{schedule}
 \end{table}
 
-See the \href{http://www.tyndale.ca/registrar/important-dates}{%
-Registrar's website} for a list of other important dates. Generally, the
-last day to add or drop a class without penalty is the end of the second
-week of class.
+See the \href{http://www.tyndale.ca/registrar/important-dates}{Registrar's
+website} for a list of other important dates. The last day to add a class, or
+to drop one without penalty, is ordinarily the end of the term's second week.
 
 \section{Course Bibliography}
 \label{bibliography}
@@ -379,7 +337,7 @@ to text, translation and commentary.
 
 	\item Martin Luther (1483--1546): \emph{Werke}, 35 = \emph{Luther’s Works}, 10--14 [BR 330.E5P4 1955]. See also: J.S. Preus, \emph{From Shadow to Promise: Old Testament Interpretation from Augustine to the Young Luther} (Cambridge, Mass.: Belknap, 1969) [BR 333.5.B5 P7 1969].
 
-	\item John Calvin (1509--1564): \emph{Commentary on the Psalms} (1557--, ET 1839--). All of Calvin's commentaries are available online, in English translation, at the \href{}{Christian Classics Ethereal Library (CCEL)}. Psalms: \href{http://www.ccel.org/ccel/calvin/calcom08.html}{1--35}, \href{http://www.ccel.org/ccel/calvin/calcom09.html}{36--66}, \href{http://www.ccel.org/ccel/calvin/calcom10.html}{67--92}, \href{http://www.ccel.org/ccel/calvin/calcom11.html}{93--119}, \href{http://www.ccel.org/ccel/calvin/calcom12.html}{119--150} [see also BS 1429.C34 1840 and Ref BS 485.C245 1979 vols. 4–6].
+	\item John Calvin (1509--1564): \emph{Commentary on the Psalms} (1557--, ET 1839--). All of Calvin's commentaries are available online, in English translation, at the \href{http://www.ccel.org/}{Christian Classics Ethereal Library (CCEL)}. Psalms: \href{http://www.ccel.org/ccel/calvin/calcom08.html}{1--35}, \href{http://www.ccel.org/ccel/calvin/calcom09.html}{36--66}, \href{http://www.ccel.org/ccel/calvin/calcom10.html}{67--92}, \href{http://www.ccel.org/ccel/calvin/calcom11.html}{93--119}, \href{http://www.ccel.org/ccel/calvin/calcom12.html}{119--150} [see also BS 1429.C34 1840 and Ref BS 485.C245 1979 vols. 4–6].
 
   \end{enumerate}
  \item Early Modern / Critical
@@ -403,19 +361,21 @@ to text, translation and commentary.
  \item Modern
   \begin{enumerate}
 
-	\item H.-J. Kraus, \emph{Psalms: A Continental Commentary} (trans. H.C. Oswald; 2 vols; Minneapolis: Fortress Press, 1988--1993) [BS 1430.3 .K725].
+  \item M.\,J. Dahood, \emph{Psalms I, II, and III} (3 vols.; Garden City, NY: Doubleday, 1956--1970) [Ref BS 491 .2 .A52 v.19a 1965; … v.19b 1968; … v.19c 1970]. Stacks also.
 
-	\item A.\,A. Anderson, \emph{The Book of Psalms} (2 vols.; Grand Rapids: Eerdmans, 1981) [BS 1430.3.A63 1972; Ref BS 491.2.N48 v19 1981].
+  \item H.-J. Kraus, \emph{Psalms: A Continental Commentary} (trans. H.C. Oswald; 2 vols; Minneapolis: Fortress Press, 1988--1993) [BS 1430.3 .K725].
 
-	\item M.\,J. Dahood, \emph{Psalms I, II, and III} (3 vols.; Garden City, NY: Doubleday, 1956--1970) [Ref BS 491 .2 .A52 v.19a 1965; … v.19b 1968; … v.19c 1970]. Stacks also.
+  \item A.\,A. Anderson, \emph{The Book of Psalms} (2 vols.; Grand Rapids: Eerdmans, 1981) [BS 1430.3.A63 1972; Ref BS 491.2.N48 v19 1981].
 
 	\item Word Commentary Series: P. Craigie, \emph{Psalms 1--50} (Waco, TX: Word Books, 1983) [Ref BS 491 .2 .W67 v.19 1983]; M. Tate, \emph{Psalms 51--100} (Dallas, TX: Word Books, 1990) [Ref BS 491 .2 .W67 v.20 1990]; L. Allen, \emph{Psalms 101--50} (rev. ed.; Nashville: Thomas Nelson, 2002) [Ref BS 491 .2 .W67 v.21 2002]. Stacks also.
 
+  \item Craig Broyles, \emph{Psalms} (New International Biblical Commentary 11; Peabody, Mass.: Hendrickson, 1999) [Ref BS 491.2.N47 v.11 1999 and BS 1430.3.B75 1999].
+
+  \item Jean-Luc Vesco, \emph{Le psautier de David: traduit et commenté} (Lectio divina, 210--211; Paris: Cerf, 2006).
+
 	\item F.-L. Hossfeld and E. Zenger, \emph{Psalms 2: A Commentary on Psalms 51--100} (Hermeneia; Minneapolis: Fortress, 2005) [Ref BS 491.2.H47 v.19b 2005] and idem, \emph{Psalms 3: A Commentary on Psalms 101--150} (Hermeneia; Minneapolis: Fortress Press, 2011) [Ref BS 491.2.H47 v.19c 2011].
 
-	\item Craig Broyles, \emph{Psalms} (New International Biblical Commentary 11; Peabody, Mass.: Hendrickson, 1999) [Ref BS 491.2.N47 v.11 1999 and BS 1430.3.B75 1999].
-
-	\item You may nominate a commentator of your own, subject to my approval.
+  \item You may nominate a commentator of your own, subject to my approval.
 
   \end{enumerate}
 \end{enumerate}
