finalize Hebrew Readings I (3013) for Fall 2014 (v3.0)

--- a/HEBR/3013.tex
+++ b/HEBR/3013.tex
@@ -1,23 +1,22 @@
-% !TEX TS-program = XeLaTeX
-% !TEX encoding = UTF-8 Unicode
-% Copyright (c) 2014 by Daniel R. Driver. All rights reserved.
+% -*- program: xelatex -*-
+% -*- pdf: HEBR_3013_Driver_F14 -*-
 
 \documentclass[titlepage]{article}
-
+% clone the necessary input files: git@github.com:danieldriver/syllabus.git
 \newcommand\policy{../policy}
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[3.0-WIP]{HEBR 3013}
+\coursecode[3.0]{HEBR 3013}
 \coursetitle{Readings in Biblical Hebrew I}
 
 \professor{Daniel R. Driver}
-\phone{416.226.6620 x2201}
+\phone{416-226-6620 ext. 2201}
 \email{ddriver@tyndale.ca}
 \officehours{Mon. \& Thur., 1:30--3:30 \PM}
 
 \semester{Fall 2014}
-\meets{Mondays \& Wednesdays}
+\meets{Mondays \& Wednesdays} % \meets{on}{at}{in}
       {8:15--9:35 \AM}
       {Ballyconnor 2083}
 \website{classes.tyndale.ca}
@@ -38,60 +37,6 @@
 
 \section{Learning Outcomes}
 \label{outcomes}
-
-% A Model of Learning Objectives
-% Adapted from http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
-%
-% A learning objective should contain a *subject* (a verb related to
-% cognitive process) and an *object* (a noun identifying the knowledge
-% or skill sought). Statements should be precise and measurable, e.g.,
-% "By the end of this course, students will be able to <verb> <noun>."
-%
-% Anderson and Krathwohl name four *classes of knowledge* that students
-% can be expected to acquire. Terms move from the concrete to the
-% abstract:
-%
-%   1. factual           (basic elements, details, terminology)
-%   2. conceptual        (interrelationship of basic elements)
-%   3. procedural        (skills, methods, techniques, criteria)
-%   4. metacognitive     (strategy, context and conditions, self-knowledge)
-%
-% Metacognitive knowledge is a special case. It concerns one's own
-% "cognition and about oneself in relation to various subject matters"
-% (Anderson and Krathwohl, 2001, p.44).
-%
-% A&K also identify 19 *cognitive processes*, arranged in six categories
-% (a 2001 revision of Bloom's 1957 taxonomy) that progress from lower
-% order to higher order thinking skills (from LOTS to HOTS):
-%
-%   1. remember
-%      * recognizing     (identifying)
-%      * recalling       (retrieving)
-%   2. understand
-%      * interpreting    (clarifying, paraphrasing, representing, translating)
-%      * exemplifying    (illustrating, instantiating)
-%      * classifying     (categorizing, subsuming)
-%      * summarizing     (abstracting, generalizing)
-%      * inferring       (concluding, extrapolating, interpolating, predicting)
-%      * comparing       (contrasting, mapping, matching)
-%      * explaining      (constructing models)
-%   3. apply
-%      * executing       (carrying out)
-%      * implementing    (using)
-%   4. analyze
-%      * differentiating (discriminating, distinguishing, focusing, selecting)
-%      * organizing      (finding coherence, integrating, outlining, parsing, structuring)
-%      * attributing     (deconstructing)
-%   5. evaluate
-%      * checking        (coordinating, detecting, monitoring, testing)
-%      * critiquing      (judging)
-%   6. create
-%      * generating      (hypothesizing)
-%      * planning        (designing)
-%      * producing       (constructing)
-%
-% If you reference a List of Measurable Verbs Used to Assess Learning
-% Outcomes, remember that A&K reverse Bloom's 6th and 5th categories.
 
 The basic goal of this course is to become proficient in reading
 biblical Hebrew. We will build on what students have done in previous
@@ -285,6 +230,7 @@ The breakdown for the semester's total work is as follows:
 
 \begin{table}[htbp]
   \centering
+  {\lining
   \begin{tabular}{lr}
     \toprule
     Translation Sets (4) & 40\% \\
@@ -292,7 +238,7 @@ The breakdown for the semester's total work is as follows:
     Recitation of Ps 1  & 10\% \\
     Final Examination    & 25\% \\
     \bottomrule
-  \end{tabular}
+  \end{tabular}}
   \caption{Distribution of Grades}
   \label{distribution}
 \end{table}
@@ -318,16 +264,9 @@ The breakdown for the semester's total work is as follows:
 \section{Course Outline}
 \label{outline}
 
-Readings of a given day should be completed before the start of class
-on the same date. Primary readings are compulsory. Any supplementary
-readings that I circulate (see Section~\ref{supplementary}) will
-be keyed to the session number (listed under \textbf{\S} in
-Table~\ref{schedule}), and should ideally be read before class as well.
-We will adhere to the schedule as closely as possible, though I reserve
-the right to adjust it to suit the needs of the class.
-
-\newcommand\Yhwh{\textsc{Yhwh}}
-\newcommand\rarr{\char"2192\hspace*{0.5pt}}
+Readings should be completed before the start of the class for which they are
+assigned. We will adhere to the schedule as closely as possible, though I
+reserve the right to adjust it to suit the needs of the class.
 
 \setcolumncount{4} % set up \sessioncount, \unit{} and \noclass{} macros
 \begin{table}[htb]% add p to put the schedule on its own page
@@ -386,10 +325,9 @@ the right to adjust it to suit the needs of the class.
   \label{schedule}
 \end{table}
 
-See the \href{http://www.tyndale.ca/registrar/important-dates}{%
-Registrar's website} for a list of other important dates. Generally, the
-last day to add or drop a class without penalty is the end of the second
-week of class.
+See the \href{http://www.tyndale.ca/registrar/important-dates}{Registrar's
+website} for a list of other important dates. The last day to add a class, or
+to drop one without penalty, is ordinarily the end of the term's second week.
 
 \section{Course Bibliography}
 \label{bibliography}
