update Addison entry in Supp Texts for Psalm 19

--- a/BSTH/3143.tex
+++ b/BSTH/3143.tex
@@ -7,7 +7,7 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[3.0]{BSTH 3143}
+\coursecode[3.0.1]{BSTH 3143}
 \coursetitle{Psalms in Interpretation}
 
 % Previously taught in: Fall 2008, Winter 2011 as RLGS 3263 (Text &
@@ -107,7 +107,7 @@ expect to get an A for the course.
 
   \item C.\,S. Lewis, ``\,`Sweeter than Honey,'\,'' pages 54--65 in \emph{Reflections on the Psalms} (London: Geoffrey Bles, 1958).
 
-  \item Joseph Addison. ``Saturday, September 20, 1712,'' \emph{The Spectator} 489 (available on \href{http://www.gutenberg.org/files/12030/12030-h/SV3/Spectator3.html#section489}{Project Gutenberg}). Also read his \href{http://cyberhymnal.org/htm/s/p/spacious.htm}{poetic paraphrase of Psalm 19}.
+  \item Joseph Addison, ``Saturday, September 20, 1712,'' \emph{The Spectator} 489 (available on \href{http://www.gutenberg.org/files/12030/12030-h/SV3/Spectator3.html#section489}{Project Gutenberg}). Also read his \href{http://www.bartleby.com/101/433.html}{poetic paraphrase of Psalm 19}.
 
   \item J. Clinton McCann, “Books I–III and the Editorial Purpose of the Hebrew Psalter,” pages 93–107 in J.\,C. McCann, ed., \emph{The Shape and Shaping of the Psalter} (JSOTSup 159; Sheffield: Sheffield Academic Press, 1993).
 
