add textbook requisitions

--- a/BSTH/1013.tex
+++ b/BSTH/1013.tex
@@ -10,6 +10,16 @@
 \coursecode[7.0]{BSTH 1013}
 \coursetitle{Old Testament Scripture}
 
+% Previously taught as RLGS 1013 in:
+%   * Fall 2008
+%   * Winter 2009
+%   * Fall 2009
+%   * Winter 2010
+%   * Fall 2010
+%   * Winter 2011
+% Previously taught as BSTH 1013 in:
+%   * tk
+
 \professor{Daniel R. Driver}
 \phone{416-226-6620 ext. 2201}
 \email{ddriver@tyndale.ca}
